optimizations
- build property keys once
- dedup starting vertices
- add choose methods for typed modes